remove different local experience. add logos
